--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "express": "^4.17.2",
     "moment": "^2.29.1",
-    "mongoose": "^6.1.2",
+    "mongoose": "^6.1.3",
     "nodemon": "^2.0.15"
-  }
+  },
+  "devDependencies": {}
 }
